--- a/DMBlog/Resource/blogInfo.plist
+++ b/DMBlog/Resource/blogInfo.plist
@@ -83,6 +83,8 @@
 			<dict/>
 		</dict>
 	</array>
+	<key>UILaunchStoryboardName</key>
+	<string>Launch Screen.storyboard</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
